tests/elab/synth_underscore.snapshot
exit status: 1

stdout = """
def a: ?0 = ?1;
types of expressions:
8..9 = ?0
metavars:
?0 = <unsolved>
?1 = <unsolved>
"""

stderr = """
error: unable to infer expression to solve hole
  ┌─ tests/elab/synth_underscore.pion:1:9
  │
1 │ def a = _;
  │         ^

aborting due to 1 previous error
"""
